<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmainlayout"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context="com.malo.comprasapp.MainActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#50BCBCBC"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/control_de_consumo"
            android:textColor="#000"
            android:textSize="15sp" />
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#80BCBCBC"
        android:gravity="center" >

        <TextView
            android:id="@+id/cantidad_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/footer"
            android:textColor="#000"
            android:textSize="15sp" />

    </RelativeLayout>

    <!-- Content below header and above footer -->

	<RelativeLayout
	    android:id="@+id/search_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/header"
	    android:background="#80D4D4D4"
	    android:gravity="center" >

	    <AutoCompleteTextView
	        android:id="@+id/autocomplete_productos"
	        android:layout_width="197dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_toLeftOf="@+id/button_agregar"
	        android:ems="10"
	        android:hint="@string/buscar_agregar"
	        android:maxLength="40"
	        android:textColor="#000000" />

	    <Button
	        android:id="@+id/button_agregar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/agregar" />

	</RelativeLayout>

	<ScrollView
	    android:id="@+id/scroll_resultado"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/footer"
	    android:layout_below="@+id/search_layout" >

		<RelativeLayout
		    android:id="@+id/results"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/search_layout"
		    android:gravity="center" >
	
		    <TableLayout
		        android:id="@+id/vista_tabla"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:stretchColumns="*" >

				 <TableRow android:background="#E8E8FF" >

			        <TextView
			            android:layout_width="100dp"
			            android:layout_column="0"
			            android:layout_weight="1"
			            android:gravity="center"
			            android:text="@string/descripcion"
			            android:textColor="#000000" >

			        </TextView>

			        <TextView
			            android:layout_width="30dp"
			            android:layout_column="1"
			            android:layout_weight="1"
			            android:gravity="center"
			            android:text="@string/precio"
			            android:textColor="#000000" >

			        </TextView>

			        <TextView
			            android:layout_width="30dp"
			            android:layout_column="2"
			            android:layout_weight="1"
			            android:gravity="center"
			            android:text="@string/cantidad"
			            android:textColor="#000000" >

			        </TextView>

			        <TextView
			            android:layout_width="30dp"
			            android:layout_column="3"
			            android:layout_weight="1"
			            android:gravity="center"
			            android:text="@string/total"
			            android:textColor="#000000" >

			        </TextView>
			    </TableRow>
		    </TableLayout>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>